--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-sesssion": "^1.15.5",
-    "mongodb": "^4.1.0"
+    "mongodb": "^4.1.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
